need to fix style for the blob image when viewed on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -821,7 +821,6 @@ img {
      }
 
      .home__blob {
-         position: absolute;
          width: 180px;
      }
 
